Fix remix tree button
Previously it would look weird when changing the primary color from Scratch 2.0 → 3.0.

--- a/addons/remix-tree-button/button.css
+++ b/addons/remix-tree-button/button.css
@@ -1,6 +1,5 @@
 .remixtree-button::before {
   background-image: url("https://scratch.mit.edu/svgs/project/remix-white.svg");
-  background-color: #4d97ff;
   display: inline-block;
   margin-right: 0.25rem;
   background-repeat: no-repeat;
